; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/vhost/extr_vhost.c_vhost_ubuf_put_and_wait.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/vhost/extr_vhost.c_vhost_ubuf_put_and_wait.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vhost_ubuf_ref = type { %struct.TYPE_2__, i32 }
%struct.TYPE_2__ = type { i32 }

@vhost_zerocopy_done_signal = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @vhost_ubuf_put_and_wait(%struct.vhost_ubuf_ref* %0) #0 {
  %2 = alloca %struct.vhost_ubuf_ref*, align 8
  store %struct.vhost_ubuf_ref* %0, %struct.vhost_ubuf_ref** %2, align 8
  %3 = load %struct.vhost_ubuf_ref*, %struct.vhost_ubuf_ref** %2, align 8
  %4 = getelementptr inbounds %struct.vhost_ubuf_ref, %struct.vhost_ubuf_ref* %3, i32 0, i32 0
  %5 = load i32, i32* @vhost_zerocopy_done_signal, align 4
  %6 = call i32 @kref_put(%struct.TYPE_2__* %4, i32 %5)
  %7 = load %struct.vhost_ubuf_ref*, %struct.vhost_ubuf_ref** %2, align 8
  %8 = getelementptr inbounds %struct.vhost_ubuf_ref, %struct.vhost_ubuf_ref* %7, i32 0, i32 1
  %9 = load i32, i32* %8, align 4
  %10 = load %struct.vhost_ubuf_ref*, %struct.vhost_ubuf_ref** %2, align 8
  %11 = getelementptr inbounds %struct.vhost_ubuf_ref, %struct.vhost_ubuf_ref* %10, i32 0, i32 0
  %12 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %11, i32 0, i32 0
  %13 = call i32 @atomic_read(i32* %12)
  %14 = icmp ne i32 %13, 0
  %15 = xor i1 %14, true
  %16 = zext i1 %15 to i32
  %17 = call i32 @wait_event(i32 %9, i32 %16)
  %18 = load %struct.vhost_ubuf_ref*, %struct.vhost_ubuf_ref** %2, align 8
  %19 = call i32 @kfree(%struct.vhost_ubuf_ref* %18)
  ret void
}

declare dso_local i32 @kref_put(%struct.TYPE_2__*, i32) #1

declare dso_local i32 @wait_event(i32, i32) #1

declare dso_local i32 @atomic_read(i32*) #1

declare dso_local i32 @kfree(%struct.vhost_ubuf_ref*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
